docs: remove useless image

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@elysiajs/swagger": "1.2.0",
     "better-sqlite3": "11.8.1",
     "drizzle-orm": "0.38.4",
-    "elysia": "1.2.0",
-    "express": "4.21.2"
+    "elysia": "1.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
