feat: add serverTiming feat

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@elysiajs/cors": "1.2.0",
     "@elysiajs/jwt": "1.2.0",
+    "@elysiajs/opentelemetry": "1.2.0",
+    "@elysiajs/server-timing": "^1.2.0",
     "@elysiajs/swagger": "1.2.0",
     "better-sqlite3": "11.8.1",
     "drizzle-orm": "0.39.1",
