--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "1.2.0",
+    "@elysiajs/cron": "1.2.0",
     "@elysiajs/jwt": "1.2.0",
     "@elysiajs/opentelemetry": "1.2.0",
     "@elysiajs/server-timing": "1.2.0",
@@ -21,7 +22,6 @@
     "drizzle-typebox": "0.3.0",
     "elysia": "1.2.12",
     "elysia-helmet": "2.0.0"
-
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
