--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build:linux": "target=linux bun run scripts/build.ts",
     "drizzle:push": "drizzle-kit push",
     "studio": "npx drizzle-kit studio",
-    "format": "bunx biome check --write src/* scripts/*",
-    "gen:schema": "bun run scripts/gen-schema.ts"
+    "format": "bunx biome check --write src/* ",
+    "gen:schema": "bun run scripts/gen-schema.ts",
+    "gen:route": "bun run scripts/gen-route/index.ts"
   },
   "dependencies": {
     "@elysiajs/cors": "1.2.0",
