script: use knitwork for gen file

--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@elysiajs/opentelemetry": "1.2.0",
     "@elysiajs/server-timing": "1.2.1",
     "@elysiajs/swagger": "1.2.2",
-    "better-sqlite3": "11.9.1",
     "drizzle-orm": "0.41.0",
     "drizzle-typebox": "0.3.1",
     "elysia": "1.2.25",
     "elysia-helmet": "2.0.0"
   },
   "devDependencies": {
+    "better-sqlite3": "11.9.1",
+    "knitwork": "1.2.0",
     "@biomejs/biome": "1.9.4",
     "bun-types": "1.2.9",
     "drizzle-kit": "0.30.6"
